--- a/TestProjectHtml/TestProjectHtml.csproj
+++ b/TestProjectHtml/TestProjectHtml.csproj
@@ -61,7 +61,7 @@
     <Content Include="css\kommandoranStyles.css" />
     <Content Include="images\audio-and-video-controls\play-button_32x32px.png" />
     <Content Include="images\audio-and-video-controls\stop_32x32px.png" />
-    <Content Include="images\PowerSwitchesMap.svg" />
+    <Content Include="images\DevicesMap.svg" />
     <Content Include="images\technology\remote-control_32x32px.png" />
     <Content Include="lib\TellstickSwitchers.js" />
     <Content Include="Web.config" />
