--- a/TestProjectHtml/TestProjectHtml.csproj
+++ b/TestProjectHtml/TestProjectHtml.csproj
@@ -109,6 +109,22 @@
   <PropertyGroup>
     <PreBuildEvent>xcopy /y "$(SolutionDir)Documentation\DevicesMap.svg" "$(ProjectDir)images"</PreBuildEvent>
   </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>robocopy /is /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml" "\\HEMSAMARITEN\wwwroot\kommandoran" index.html
+robocopy /is /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml\css" "\\HEMSAMARITEN\wwwroot\kommandoran\css"
+robocopy /is /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml\images" "\\HEMSAMARITEN\wwwroot\kommandoran\images"
+
+set rce=%25errorlevel%25
+IF not %25rce%25==1 (
+	IF %25rce%25==3 (
+		exit 0
+	)ELSE (
+        exit %25rce%25
+    )
+) ELSE (    
+	exit 0	
+)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
