--- a/TestProjectHtml/TestProjectHtml.csproj
+++ b/TestProjectHtml/TestProjectHtml.csproj
@@ -110,9 +110,10 @@
     <PreBuildEvent>xcopy /y "$(SolutionDir)Documentation\DevicesMap.svg" "$(ProjectDir)images"</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>robocopy /is /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml" "\\HEMSAMARITEN\wwwroot\kommandoran" index.html
-robocopy /is /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml\css" "\\HEMSAMARITEN\wwwroot\kommandoran\css"
-robocopy /is /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml\images" "\\HEMSAMARITEN\wwwroot\kommandoran\images"
+    <PostBuildEvent>robocopy /is /s /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml" "\\HEMSAMARITEN\wwwroot\kommandoran" index.html
+robocopy /is /s /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml\css" "\\HEMSAMARITEN\wwwroot\kommandoran\css" /mir
+robocopy /is /s /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml\images" "\\HEMSAMARITEN\wwwroot\kommandoran\images"
+robocopy /is /s /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml\lib" "\\HEMSAMARITEN\wwwroot\kommandoran\lib"
 
 set rce=%25errorlevel%25
 IF not %25rce%25==1 (
