--- a/TestProjectHtml/TestProjectHtml.csproj
+++ b/TestProjectHtml/TestProjectHtml.csproj
@@ -63,7 +63,9 @@
     <Content Include="images\audio-and-video-controls\stop_32x32px.png" />
     <Content Include="images\DevicesMap.svg" />
     <Content Include="images\technology\remote-control_32x32px.png" />
+    <Content Include="lib\SurveillanceCameraModal.js" />
     <Content Include="lib\TellstickSwitchers.js" />
+    <Content Include="surveillanceCameraModal.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -110,20 +112,23 @@
     <PreBuildEvent>xcopy /y "$(SolutionDir)Documentation\DevicesMap.svg" "$(ProjectDir)images"</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>robocopy /is /s /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml" "\\HEMSAMARITEN\wwwroot\kommandoran" index.html
-robocopy /is /s /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml\css" "\\HEMSAMARITEN\wwwroot\kommandoran\css" /mir
-robocopy /is /s /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml\images" "\\HEMSAMARITEN\wwwroot\kommandoran\images"
-robocopy /is /s /np /nfl /njh /njs /ndl /nc /ns "$(SolutionDir)TestProjectHtml\lib" "\\HEMSAMARITEN\wwwroot\kommandoran\lib"
+    <PostBuildEvent>echo Publishing project to HEMSAMARITEN...
+robocopy /is "$(SolutionDir)TestProjectHtml" "\\HEMSAMARITEN\wwwroot\kommandoran" *.html
+robocopy /is /mir "$(SolutionDir)TestProjectHtml\css" "\\HEMSAMARITEN\wwwroot\kommandoran\css"
+robocopy /is /mir "$(SolutionDir)TestProjectHtml\images" "\\HEMSAMARITEN\wwwroot\kommandoran\images"
+robocopy /is /mir "$(SolutionDir)TestProjectHtml\lib" "\\HEMSAMARITEN\wwwroot\kommandoran\lib"
 
 set rce=%25errorlevel%25
-IF not %25rce%25==1 (
+IF %25rce%25==1 (
+	echo Published project to HEMSAMARITEN done!
+	exit 0
+) ELSE (
 	IF %25rce%25==3 (
+		echo Published project to HEMSAMARITEN done!
 		exit 0
 	)ELSE (
         exit %25rce%25
     )
-) ELSE (    
-	exit 0	
 )</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
