--- a/TestProjectHtml/TestProjectHtml.csproj
+++ b/TestProjectHtml/TestProjectHtml.csproj
@@ -59,7 +59,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\kommandoranStyles.css" />
+    <Content Include="images\surveillance-camera600x598.png" />
+    <Content Include="images\technology\camera-flash32x32.png" />
+    <Content Include="images\technology\light-bulb-off32x32.png" />
+    <Content Include="images\technology\photo-camera32x32.png" />
     <Content Include="images\audio-and-video-controls\play-button_32x32px.png" />
+    <Content Include="images\audio-and-video-controls\speaker32x32.png" />
     <Content Include="images\audio-and-video-controls\stop_32x32px.png" />
     <Content Include="images\DevicesMap.svg" />
     <Content Include="images\technology\remote-control_32x32px.png" />
