--- a/TestProjectHtml/TestProjectHtml.csproj
+++ b/TestProjectHtml/TestProjectHtml.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Content Include="css\kommandoranStyles.css" />
     <Content Include="images\alarm.png" />
+    <Content Include="images\home_32x32.png" />
     <Content Include="images\surveillance-camera600x598.png" />
     <Content Include="images\audio-and-video-controls\play-button_32x32px.png" />
     <Content Include="images\audio-and-video-controls\stop_32x32px.png" />
